Sun Jun 13 14:12:25 2004  Jeff Parsons <j.parsons@vanderbilt.edu>

        * TAO_IDL/be/be_visitor_interface/interface_ih.cpp:
        * TAO_IDL/be/be_visitor_interface/interface_is.cpp:
        
          Disabled generation of implementation class for abstract
          interfaces, since there is no skeleton class to inherit from.

Sun Jun 13 17:23:12 2004  UTC 2004  Johnny Willemsen  <jwillemsen@remedy.nl>

        * orbsvcs/orbsvcs/LoadBalancing/LB_CPU_Load_Average_Monitor.cpp:
        * orbsvcs/orbsvcs/LoadBalancing/LB_CPU_Utilization_Monitor.cpp:
        * orbsvcs/orbsvcs/PortableGroup/PG_FactoryRegistry.cpp:
        * orbsvcs/orbsvcs/RTCosScheduling/RTCosScheduling_PCP_Manager.cpp:
        * orbsvcs/orbsvcs/RTCosScheduling/RTCosScheduling_ServerScheduler_i.cpp:
        * orbsvcs/orbsvcs/Trader/Trading_Loader.cpp:
          Added needed includes

Sun Jun 13 17:14:12 2004  UTC 2004  Johnny Willemsen  <jwillemsen@remedy.nl>

        * orbsvcs/orbsvcs/Naming/Flat_File_Persistence.cpp:
        * orbsvcs/orbsvcs/Naming/Naming_Utils.cpp:
        * orbsvcs/orbsvcs/Naming/Persistent_Context_Index.cpp:
          Added needed includes

Sun Jun 13 17:10:12 2004  UTC 2004  Johnny Willemsen  <jwillemsen@remedy.nl>

        * TAO_IDL/be/be_interface.cpp:
        * TAO_IDL/driver/drv_args.cpp:
        * TAO_IDL/driver/drv_preproc.cpp:
          Added needed includes

Sun Jun 13 07:56:20 2004  Phil Mesnier  <mesnier_p@ociweb.com>

        * interop-tests/wchar/client.cpp:
        * interop-tests/wchar/interop_wchar_i.cpp:
        * interop-tests/wchar/wchar_reference.cpp:
        * interop-tests/wchar/wchar_reference.h:
          Fixed the build in the non-wchar case so that the test builds
          clean, even if the result is trivial.

        * tests/CodeSets/libs/UCS4_UTF16/WUCS4_UTF16.h:
          Another fuzz related fix.

Sun Jun 14 11:36:12 UTC 2004  Johnny Willemsen  <jwillemsen@remedy.nl>

        * tao/PortableServer/Operation_Table.cpp: