@@ -1,8 +1,17 @@
+Sun Jun 13 15:28:03 2004  Phil Mesnier  <mesnier_p@ociweb.com>
+
+        * interop-tests/wchar/client.cpp:
+        * interop-tests/wchar/server.cpp:
+          Ensure the run_test.pl script does not generate an error when
+          the test is run on a platform without wchar support. In that
+          case it simply reports that the test requires wchar support and
+          moves on.
+
 Sun Jun 13 14:12:25 2004  Jeff Parsons <j.parsons@vanderbilt.edu>
 
         * TAO_IDL/be/be_visitor_interface/interface_ih.cpp:
         * TAO_IDL/be/be_visitor_interface/interface_is.cpp:
-        
+
           Disabled generation of implementation class for abstract
           interfaces, since there is no skeleton class to inherit from.
 
